Remove corrected letterspacing with new typesetting

--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -2,7 +2,6 @@
     font-family: 'Computer Modern Serif';
     color: #000000;
     font-size: $font-size;
-    letter-spacing: -0.2pt;
 
     // Default text styling
     p {
